--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="0dp"
     tools:context=".MyHome"
     android:padding="0dp"
-    android:theme="@android:style/Theme.NoTitleBar"
+    android:theme="@style/Theme.AppCompat"
     android:background="@drawable/slide2">
 
     <LinearLayout
@@ -31,4 +31,13 @@
             android:layout_gravity="center"
             android:layout_marginTop="12dp" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_check_data_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/check_data_settings"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp" />
 </RelativeLayout>
