--- a/app/src/main/res/layout/eula_layout.xml
+++ b/app/src/main/res/layout/eula_layout.xml
@@ -38,6 +38,7 @@
         android:layout_below="@id/sv_license"
         android:layout_centerHorizontal="true"
         android:visibility="gone"
+        android:checked="true"
         android:layout_marginTop="25dp" />
 
     <Button
